--- a/front/public/css/layout/adminSide.css
+++ b/front/public/css/layout/adminSide.css
@@ -1,11 +1,13 @@
 aside {
     width: 27rem;
-    height: 100vh;
+    height: 100%;
     background-color: var(--footer);
+    position: absolute;
+    left: 0;
 }
 
 .adminSideFisrt {
-    width: 100%;
+    width: 27rem;
     height: 40%;
     display: flex;
     flex-direction: column;
@@ -24,6 +26,7 @@ aside {
 }
 
 .adminSideSecond {
+    width: 27rem;
     padding-top: 4rem;
     display: flex;
     flex-direction: column;
@@ -34,17 +37,32 @@ aside {
 .adminSideContent {
     cursor: pointer;
     margin: 1rem 0;
-    width: 70%;
+    width: 18rem;
+    height: 5rem;
     font-weight: 500;
     font-size: 1.75rem;
     color: var(--main);
     display: flex;
+    align-items: center;
+}
+
+.adminSideContent:hover {
+    background-color: var(--header);
+    color: var(--footer);
+    border-radius: 1rem;
+    box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
 }
 
 .adminSideContent > div {
+    line-height: 3rem;
     margin: 0.5rem;
 }
 
 .adminSideicon {
     width: 3rem;
+}
+
+.textCenter {
+    text-align:center;
+    line-height: 1.75remm;
 }
