--- a/front/views/layout/adminSide.html
+++ b/front/views/layout/adminSide.html
@@ -7,19 +7,19 @@
     <div class="adminSideSecond">
         <div class="adminSideContent">
             <div><img class="adminSideicon" src="/img/adminSideUser.png" /></div>
-            <div>회원 관리</div>
+            <div class="textCenter">회원 관리</div>
         </div>
         <div class="adminSideContent">
             <div><img class="adminSideicon" src="/img/adminSideCategory.webp" /></div>
-            <div>카테고리 관리</div>
+            <div class="textCenter">카테고리 관리</div>
         </div>
         <div class="adminSideContent">
             <div><img class="adminSideicon" src="/img/adminSideBoard.webp" /></div>
-            <div>게시물 관리</div>
+            <div class="textCenter">게시물 관리</div>
         </div>
         <div class="adminSideContent">
             <div><img class="adminSideicon" src="/img/adminSideStats.png" /></div>
-            <div>통계</div>
+            <div class="textCenter">통계</div>
         </div>
     </div>
 </aside>
