fixed: adminCate 수정

--- a/front/views/layout/adminSide.html
+++ b/front/views/layout/adminSide.html
@@ -1,7 +1,7 @@
 {% block adminSide %}
-<aside>
+<aside id="adminSide">
     <div class="adminSideFisrt">
-        <div>EZO</div>
+        <div>관리자 페이지</div>
         <img src="/img/header.png" class="adminSideImg" />
     </div>
     <div class="adminSideSecond">
