--- a/front/public/css/admin/adminBoard.css
+++ b/front/public/css/admin/adminBoard.css
@@ -3,10 +3,14 @@
     align-items: center;
     position: relative;
     width: 100%;
+    height: 100vh;
+    background: linear-gradient(180deg, rgba(129, 211, 114, 0.1) 100%, rgb(110, 90, 60) 100%), url(../../img/profileback.jpg) 10% no-repeat;
+    background-size: cover;
 }
 
 .adminRight {
-    margin: 10rem auto;
+    position: relative;
+    left: 40rem;
     height: 90rem;
     display: flex;
     flex-direction: column;
@@ -21,7 +25,7 @@
 
 .adminRightTop > h1 {
     font-size: 3.6rem;
-    font-weight: 350;
+    font-weight: 700;
 }
 
 .adminRightTop > p {
