--- a/front/public/css/admin/adminBoard.css
+++ b/front/public/css/admin/adminBoard.css
@@ -2,6 +2,8 @@
     display: flex;
     align-items: center;
     position: relative;
+    min-width: 180rem;
+    min-height: 120rem;
     width: 100%;
     height: 100vh;
     background: linear-gradient(180deg, rgba(129, 211, 114, 0.1) 100%, rgb(110, 90, 60) 100%), url(../../img/profileback.jpg) 10% no-repeat;
