--- a/front/public/css/user/profile.css
+++ b/front/public/css/user/profile.css
@@ -23,6 +23,7 @@
     height: 100rem;
     background: linear-gradient(180deg, rgba(129, 211, 114, 0.1) 100%, rgb(110, 90, 60) 100%), url(../../img/note.jpg) 10% no-repeat;
     background-size: cover;
+    box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
 }
 
 .profileInfo {
