--- a/front/views/admin/adminUserEdit.html
+++ b/front/views/admin/adminUserEdit.html
@@ -5,51 +5,93 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="/css/root.css" />
-        <link rel="stylesheet" href="/css/user/profileEdit.css" />
         <link rel="stylesheet" href="/css/layout/adminSide.css" />
-        <style>
-            .adminWrap {
-                display: flex;
-            }
-            button {
-                background-color: var(--footer) !important;
-            }
-            aside {
-                height: 100rem;
-            }
-            .adminRight {
-                height: 10rem;
-            }
-            .adminRightTop {
-                width: 120rem;
-                height: 10%;
-                padding: 3rem 0 0 3rem;
-                box-sizing: border-box;
-            }
-
-            .adminRightTop > h1 {
-                font-size: 3.6rem;
-                font-weight: 350;
-            }
-
-            .adminRightTop > p {
-                font-size: 1.6rem;
-                margin-top: 2.5rem;
-                font-weight: 160;
-            }
-        </style>
+        <link rel="stylesheet" href="/css/admin/adminUserEdit.css" />
         <title>Document</title>
     </head>
     <body>
         <div class="adminWrap">
             {% include 'layout/adminSide.html' %}
-            <div class="adiminRight">
-                <div class="adminRightTop">
-                    <h1>회원정보 수정</h1>
-                    <p>회원의 정보를 수정할 수 있습니다.</p>
+            <!-- profile start -->
+            <div id="profileWrap">
+                <div class="profileWrap">
+                    <div id="profileHeader">
+                        <h1>회원정보 수정</h1>
+                        <p>회원의 정보를 수정할 수 있습니다.</p>
+                    </div>
+                    <div id="profileBody">
+                        <div class="profileBox">
+                            <div id="profileBox1">
+                                <div id="avatarWrap">
+                                    <img src="/img/profileEdit.PNG">
+                                </div>
+                                <form id="avatarController">
+                                    <div>사진 불러오기</div>
+                                    <button>저장하기</button>
+                                </form>
+                            </div>
+                            <div id="profileBox2">
+                                <h2>계정 정보</h2>
+                                <div class="profileContents">
+                                    <div class="profileContent">
+                                        <div class="profileContentName">이름</div>
+                                        <input type="text" class="profileContentInfo" placeholder="넌적스 문법입니다.">
+                                    </div>
+                                    <div class="profileContent">
+                                        <div class="profileContentName">아이디</div>
+                                        <input type="text" class="profileContentInfo" placeholder="넌적스 문법입니다.">
+                                    </div>
+                                    <div class="profileContent">
+                                        <div class="profileContentName">비밀번호</div>
+                                        <input type="text" class="profileContentInfo" placeholder="넌적스 문법입니다.">
+                                    </div>
+                                    <div class="profileContent">
+                                        <div class="profileContentName">닉네임</div>
+                                        <input type="text" class="profileContentInfo" placeholder="넌적스 문법입니다.">
+                                    </div>
+                                    <div class="profileContent">
+                                        <div class="profileContentName">성별</div>
+                                        <input type="text" class="profileContentInfo" placeholder="넌적스 문법입니다.">
+                                    </div>
+                                    <div class="profileContent">
+                                        <div class="profileContentName">이메일</div>
+                                        <input type="text" class="profileContentInfo" placeholder="넌적스 문법입니다.">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="profileBox">
+                            <div id="profileBox3">
+                                <h2>회원 정보</h2>
+                                <div class="profileContents">
+                                    <div class="profileContent">
+                                        <div class="profileContentName">휴대폰 번호</div>
+                                        <input type="text" class="profileContentInfo" placeholder="넌적스 문법입니다.">
+                                    </div>
+                                    <div class="profileContent">
+                                        <div class="profileContentName">집전화 번호</div>
+                                        <input type="text" class="profileContentInfo" placeholder="넌적스 문법입니다.">
+                                    </div>
+                                    <div class="profileContent">
+                                        <div class="profileContentName">주소</div>
+                                        <input type="text" class="profileContentInfo" placeholder="넌적스 문법입니다.">
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="profileBox4">
+                                <h2>간단 소개글</h2>
+                                <div class="profileContentInfoWrap">
+                                    <input type="text" class="profileContentInfo" placeholder="넌적스 문법입니다.">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="profileFooter">
+                        <button id="profileUpdateBtn">수정하기</button>
+                    </div>
                 </div>
-                {% include 'layout/profileForm.html' %}
             </div>
+            <!-- profile end -->
         </div>
     </body>
 </html>
