--- a/front/views/user/profile.html
+++ b/front/views/user/profile.html
@@ -20,17 +20,19 @@
                     <div class="profileInfoLeft">
                         <div class="profileImgWrap">
                             <div class="profileInfoAvatar"><img src="/img/profileEdit.PNG" alt=""></div>
-                            <div class="profileInfoImg">
+                            <form class="profileInfoImg">
                                 <div>사진 불러오기</div>
-                                <button>저장하기</button>
-                            </div>
+                                <button>
+                                    <div>저장하기</div>
+                                </button>
+                            </form>
                         </div>
                     </div>
                     <div class="profileInfoRight">
                         <div class="profileImgWrap2 profileBox">
                             <div class="profileAccount">
                                 <div class="profileAccountSubject">계정 정보</div>
-                                <a href="#"><div class="profileAccountUpdate">수정</div></a>
+                                <a href="#"><div class="profileAccountUpdate">수정하기</div></a>
                             </div>
                             <div class="profileAccountInfo">
                                 <div class="profileAccountInfoContent">
