--- a/front/public/css/admin/adminUser.css
+++ b/front/public/css/admin/adminUser.css
@@ -62,6 +62,7 @@
     background-color: #dedede;
     border-radius: 0.3rem;
     box-sizing: border-box;
+    box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
 }
 
 .adminUserSearch > form > button {
@@ -78,7 +79,8 @@
     padding: 1rem;
     color: var(--main);
     background-color: var(--header);
-    transition: all 0.3s;
+    transition: all 0.2s;
+    box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
 }
 
 .adminUserSearch > form > button:hover {
@@ -132,6 +134,7 @@ table {
     font-size: 1.6rem;
     color: var(--main);
     font-weight: 700;
+    box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
 }
 
 .trBody > td > button:hover {
@@ -190,7 +193,8 @@ table {
     padding: 1rem;
     color: var(--main);
     background-color: var(--header);
-    transition: all 0.3s;
+    transition: all 0.2s;
+    box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
 }
 
 .adminPreNext > a:hover {
