--- a/front/public/css/admin/adminBoard.css
+++ b/front/public/css/admin/adminBoard.css
@@ -63,6 +63,7 @@
     background-color: #dedede;
     border-radius: 0.3rem;
     box-sizing: border-box;
+    box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
 }
 
 .adminBoardSearch > form > button {
@@ -80,6 +81,7 @@
     color: var(--main);
     background-color: var(--header);
     transition: all 0.3s;
+    box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
 }
 
 .adminBoardSearch > form > button:hover {
@@ -177,6 +179,7 @@ table {
     color: var(--main);
     background-color: var(--header);
     transition: all 0.3s;
+    box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
 }
 
 .adminPreNext > a:hover {
