--- a/front/public/css/user/error.css
+++ b/front/public/css/user/error.css
@@ -78,4 +78,5 @@
     padding: 1rem;
     color: var(--main);
     background-color: var(--header);
+    box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
 }
