--- a/front/public/css/user/login.css
+++ b/front/public/css/user/login.css
@@ -84,6 +84,7 @@ body {
 
 #loginBoxWrap > input, button {
     margin: 1rem 0;
+    box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
 }
 
 #loginBoxWrap > input {
@@ -145,4 +146,5 @@ body {
     padding: 1rem;
     color: var(--main);
     background-color: var(--header);
+    box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
 }
