feat:boardList.html 완료

--- a/front/public/css/board/boardView.css
+++ b/front/public/css/board/boardView.css
@@ -82,7 +82,7 @@ article {
     align-items: center;
 }
 
-.viewContent > .contentBottom > .thumsupImg > .click {
+.viewContent > .contentBottom > .thumsupImg > .off {
     display: none;
 }
 
