--- a/front/views/board/view.html
+++ b/front/views/board/view.html
@@ -4,8 +4,11 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="../../public/css/root.css" />
-        <link rel="stylesheet" href="../../public/css/board/boardView.css" />
+        <link rel="stylesheet" href="/css/root.css" />
+        <link rel="stylesheet" href="/css/layout/header.css" />
+        <link rel="stylesheet" href="/css/layout/footer.css" />
+        <link rel="stylesheet" href="/css/board/boardView.css" />
+        <script src="/js/board/view.js" type="text/javascript"></script>
         <title>Document</title>
     </head>
     <body>
@@ -52,8 +55,8 @@
                             <!-- 좋아요 -->
                             <div class="contentBottom">
                                 <div class="thumsupImg">
-                                    <a href="#" class="nonclick"><img src="../../public/img/thumsup.png" /></a>
-                                    <a href="#" class="click"><img src="../../public/img/thumsupClick.png" /></a>
+                                    <a href="#" class="nonclick"><img src="/img/thumsup.png" /></a>
+                                    <a href="#" class="click off"><img src="/img/thumsupClick.png" /></a>
                                 </div>
                                 <div class="thumsupCount">150</div>
                             </div>
@@ -67,7 +70,7 @@
                             <div class="upperComment">
                                 <div class="userCommnetContent">
                                     <div class="avatar">
-                                        <a> <img src=../../public/img/profileEdit.PNG> </a>
+                                        <a> <img src="/img/profileEdit.PNG" /> </a>
                                     </div>
                                     <div class="commentCenterContent">
                                         <ul>
@@ -87,10 +90,10 @@
                             <div class="commentReply">
                                 <div class="userCommnetContent">
                                     <div class="replyImg">
-                                        <img src="../../public/img/replyArrow.png" />
+                                        <img src="/img/replyArrow.png" />
                                     </div>
                                     <div class="avatar">
-                                        <a> <img src=../../public/img/profileEdit.PNG> </a>
+                                        <a> <img src="/img/profileEdit.PNG" /> </a>
                                     </div>
                                     <div class="commentCenterContent">
                                         <ul>
