feat: login / join token값 확인완료

--- a/front/views/main.html
+++ b/front/views/main.html
@@ -180,7 +180,7 @@
                         </div>
                     </div>
                     <div class="mainContentWriter">
-                        <div class="mainContentWriterLeft">바보김홍태</div>
+                        <div class="mainContentWriterLeft">{{userid}}</div>
                         <div class="mainContentWriterRight">2023-02-03</div>
                     </div>
                     <div class="mainContentHashLike">
