--- a/front/views/user/join.html
+++ b/front/views/user/join.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="stylesheet" href="/css/root.css">
-        <link rel="stylesheet" href="/css/user/join.css">
-        <link rel="stylesheet" href="/css/layout/agree.css">
-        <link rel="stylesheet" href="/css/layout/footer.css">
+        <link rel="stylesheet" href="/css/root.css" />
+        <link rel="stylesheet" href="/css/user/join.css" />
+        <link rel="stylesheet" href="/css/layout/agree.css" />
+        <link rel="stylesheet" href="/css/layout/footer.css" />
         <script src="/js/user/join.js" defer></script>
         <script src="/js/layout/popup.js" defer></script>
     </head>
     <body>
         <div id="back">
             <section id="join">
-                <a href="#" id="joinLogo">
-                    TeamEzo
-                </a>
-                <form class="joinWrap" action="/">
+                <a href="#" id="joinLogo"> TeamEzo </a>
+                <form class="joinWrap" action="/user/join" method="post">
                     <div class="join">
-                        {% include "layout/agree.html" %}
-                        {% include "layout/infoAgree.html" %}
+                        {% include "layout/agree.html" %} {% include "layout/infoAgree.html" %}
                         <div class="apiWrap">
                             <div class="api">
-                                <a href="#"><img src="/img/join_kakao.png"></a>
-                                <a href="#"><img src="/img/join_google.png"></a>
+                                <a href="#"><img src="/img/join_kakao.png" /></a>
+                                <a href="#"><img src="/img/join_google.png" /></a>
                             </div>
                         </div>
                         <div class="joinFormWrap">
@@ -35,7 +32,12 @@
                                     <div class="star">*</div>
                                 </div>
                                 <div class="joinInputIdWrap">
-                                    <input class="joinInputId" type="text" placeholder="아이디를 입력해주세요">
+                                    <input
+                                        class="joinInputId"
+                                        type="text"
+                                        name="userid"
+                                        placeholder="아이디를 입력해주세요"
+                                    />
                                     <button class="duplicate">중복 확인</button>
                                 </div>
                                 <div class="joinCheck">아이디를 확인해주세요</div>
@@ -45,7 +47,12 @@
                                     <div>PASSWORD</div>
                                     <div class="star">*</div>
                                 </div>
-                                <input class="joinInput" type="password" placeholder="비밀번호를 입력해주세요">
+                                <input
+                                    class="joinInput"
+                                    type="password"
+                                    name="userpw"
+                                    placeholder="비밀번호를 입력해주세요"
+                                />
                                 <div class="joinCheck">비밀번호를 확인해주세요</div>
                             </div>
                             <div class="joinForm">
@@ -53,7 +60,12 @@
                                     <div>PASSWORD CHECK</div>
                                     <div class="star">*</div>
                                 </div>
-                                <input class="joinInput" type="password" placeholder="비밀번호를 확인해주세요">
+                                <input
+                                    class="joinInput"
+                                    type="password"
+                                    name="userpwchk"
+                                    placeholder="비밀번호를 확인해주세요"
+                                />
                                 <div class="joinCheck">비밀번호가 일치하지않습니다</div>
                             </div>
                             <div class="joinForm">
@@ -61,7 +73,12 @@
                                     <div>NAME</div>
                                     <div class="star">*</div>
                                 </div>
-                                <input class="joinInput" type="text" placeholder="이름을 입력해주세요">
+                                <input
+                                    class="joinInput"
+                                    type="text"
+                                    name="username"
+                                    placeholder="이름을 입력해주세요"
+                                />
                                 <div class="joinCheck">이름을 확인해주세요</div>
                             </div>
                             <div class="joinForm">
@@ -69,14 +86,23 @@
                                     <div>E-MAIL</div>
                                     <div class="star">*</div>
                                 </div>
-                                <input class="joinInput" type="text" placeholder="이메일을 입력해주세요">
+                                <input
+                                    class="joinInput"
+                                    type="text"
+                                    name="useremail"
+                                    placeholder="이메일을 입력해주세요"
+                                />
                                 <div class="joinCheck">이메일을 확인해주세요</div>
                             </div>
                         </div>
                         <div class="agreeWrap">
                             <div class="agree">
                                 <div class="checkBoxWrap">
-                                    <img id="agreeUse" class="checkBox" src="/img/join_check-mark.png">
+                                    <img
+                                        id="agreeUse"
+                                        class="checkBox"
+                                        src="/img/join_check-mark.png"
+                                    />
                                 </div>
                                 <div class="agreeOk">
                                     <div>이용약관에 동의합니다.</div>
@@ -86,7 +112,11 @@
                             </div>
                             <div class="agree">
                                 <div class="checkBoxWrap">
-                                    <img id="agreeInfo" class="checkBox" src="/img/join_check-mark.png">
+                                    <img
+                                        id="agreeInfo"
+                                        class="checkBox"
+                                        src="/img/join_check-mark.png"
+                                    />
                                 </div>
                                 <div class="agreeOk">
                                     <div>개인정보취급 방침에 동의합니다.</div>
