--- a/front/views/user/profile.html
+++ b/front/views/user/profile.html
@@ -1,107 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/css/root.css">
-    <link rel="stylesheet" href="/css/layout/footer.css">
-    <link rel="stylesheet" href="/css/user/profile.css">
-</head>
-<body>
-    <div id="wrap">
-        <div id="profileWrap">
-            <a href="#" id="joinLogo">
-                TeamEzo
-            </a>
-            <section id="profile">
-                <div class="profileInfo">
-                    <div class="profileInfoLeft">
-                        <div class="profileImgWrap">
-                            <div class="profileInfoAvatar"><img src="/img/profileEdit.PNG" alt=""></div>
-                            <form class="profileInfoImg">
-                                <div>사진 불러오기</div>
-                                <button>
-                                    <div>저장하기</div>
-                                </button>
-                            </form>
-                        </div>
-                    </div>
-                    <div class="profileInfoRight">
-                        <div class="profileImgWrap2 profileBox">
-                            <div class="profileAccount">
-                                <div class="profileAccountSubject">계정 정보</div>
-                                <a href="#"><div class="profileAccountUpdate">수정하기</div></a>
-                            </div>
-                            <div class="profileAccountInfo">
-                                <div class="profileAccountInfoContent">
-                                    <div>이 &nbsp&nbsp&nbsp 름</div>
-                                    <div>아무개</div>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link rel="stylesheet" href="/css/root.css" />
+        <link rel="stylesheet" href="/css/layout/footer.css" />
+        <link rel="stylesheet" href="/css/user/profile.css" />
+    </head>
+    <body>
+        <div id="wrap">
+            <div id="profileWrap">
+                <a href="#" id="joinLogo"> TeamEzo </a>
+                <section id="profile">
+                    <div class="profileInfo">
+                        <div class="profileInfoLeft">
+                            <div class="profileImgWrap">
+                                <div class="profileInfoAvatar">
+                                    <img src="/img/profileEdit.PNG" alt="" />
                                 </div>
-                                <div class="profileAccountInfoContent">
-                                    <div>아&nbsp이&nbsp디</div>
-                                    <div>abcd</div>
-                                </div>
-                                <div class="profileAccountInfoContent">
-                                    <div>이&nbsp메&nbsp일</div>
-                                    <div>abcd@gmail.com</div>
-                                </div>
+                                <form class="profileInfoImg">
+                                    <div>사진 불러오기</div>
+                                    <button>
+                                        <div>저장하기</div>
+                                    </button>
+                                </form>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="profileToggle">
-                    <div class="profileSubject">내가 작성한 글</div>
-                    <div class="profileSubject">내가 작성한 댓글</div>
-                    <div class="profileSubject">내가 좋아요한 글</div>
-                </div>
-                <div class="profileContents">
-                    <div class="profileContentWrap">
-                        <div class="profileContent">
-                            <div>제목입니당ㅇㅇㅇㅇㅇ</div>
-                            <div>(7)</div>
+                        <div class="profileInfoRight">
+                            <div class="profileImgWrap2 profileBox">
+                                <div class="profileAccount">
+                                    <div class="profileAccountSubject">계정 정보</div>
+                                    <a href="#"><div class="profileAccountUpdate">수정하기</div></a>
+                                </div>
+                                <div class="profileAccountInfo">
+                                    <div class="profileAccountInfoContent">
+                                        <div>이 &nbsp&nbsp&nbsp 름</div>
+                                        <div>{{username}}</div>
+                                    </div>
+                                    <div class="profileAccountInfoContent">
+                                        <div>아&nbsp이&nbsp디</div>
+                                        <div>{{userid}}</div>
+                                    </div>
+                                    <div class="profileAccountInfoContent">
+                                        <div>이&nbsp메&nbsp일</div>
+                                        <div>{{useremail}}</div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="profileRegister">2023-01-30</div>
                     </div>
-                    <div class="profileContentWrap">
-                        <div class="profileContent">
-                            <div>제목입니당ㅇㅇㅇㅇㅇ</div>
-                            <div>(7)</div>
+                    <div class="profileToggle">
+                        <div class="profileSubject">내가 작성한 글</div>
+                        <div class="profileSubject">내가 작성한 댓글</div>
+                        <div class="profileSubject">내가 좋아요한 글</div>
+                    </div>
+                    <div class="profileContents">
+                        <div class="profileContentWrap">
+                            <div class="profileContent">
+                                <div>제목입니당ㅇㅇㅇㅇㅇ</div>
+                                <div>(7)</div>
+                            </div>
+                            <div class="profileRegister">2023-01-30</div>
                         </div>
-                        <div class="profileRegister">2023-01-30</div>
-                    </div>
-                    <div class="profileContentWrap">
-                        <div class="profileContent">
-                            <div>제목입니당ㅇㅇㅇㅇㅇ</div>
-                            <div>(7)</div>
+                        <div class="profileContentWrap">
+                            <div class="profileContent">
+                                <div>제목입니당ㅇㅇㅇㅇㅇ</div>
+                                <div>(7)</div>
+                            </div>
+                            <div class="profileRegister">2023-01-30</div>
                         </div>
-                        <div class="profileRegister">2023-01-30</div>
-                    </div>
-                    <div class="profileContentWrap">
-                        <div class="profileContent">
-                            <div>제목입니당ㅇㅇㅇㅇㅇ</div>
-                            <div>(7)</div>
+                        <div class="profileContentWrap">
+                            <div class="profileContent">
+                                <div>제목입니당ㅇㅇㅇㅇㅇ</div>
+                                <div>(7)</div>
+                            </div>
+                            <div class="profileRegister">2023-01-30</div>
                         </div>
-                        <div class="profileRegister">2023-01-30</div>
-                    </div>
-                    <div class="profileContentWrap">
-                        <div class="profileContent">
-                            <div>제목입니당ㅇㅇㅇㅇㅇ</div>
-                            <div>(7)</div>
+                        <div class="profileContentWrap">
+                            <div class="profileContent">
+                                <div>제목입니당ㅇㅇㅇㅇㅇ</div>
+                                <div>(7)</div>
+                            </div>
+                            <div class="profileRegister">2023-01-30</div>
                         </div>
-                        <div class="profileRegister">2023-01-30</div>
+                        <div class="profileContentWrap">
+                            <div class="profileContent">
+                                <div>제목입니당ㅇㅇㅇㅇㅇ</div>
+                                <div>(7)</div>
+                            </div>
+                            <div class="profileRegister">2023-01-30</div>
+                        </div>
                     </div>
-                </div>
-                <div class="profileBtnWrap">
-                    <ul>
-                        <li class="prev">이전</li>
-                        <li clsss="next">다음</li>
-                    </ul>
-                </div>
-            </section>
+                    <div class="profileBtnWrap">
+                        <ul>
+                            <li class="prev">이전</li>
+                            <li clsss="next">다음</li>
+                        </ul>
+                    </div>
+                </section>
+            </div>
+            {% include "layout/footer.html" %}
         </div>
-    {% include "layout/footer.html" %}
-    </div>
-</body>
+    </body>
 </html>
