--- a/front/views/user/welcome.html
+++ b/front/views/user/welcome.html
@@ -25,8 +25,8 @@
                             <span id="welcomeLine"></span>
                         </div>
                         <div id="welcomeCele">
-                            <p>username 님, 회원가입을 축하합니다.</p>
-                            <p>새로운 아이디는 userid 입니다.</p>
+                            <p>{{username}} 님, 회원가입을 축하합니다.</p>
+                            <p>새로운 아이디는 {{userid}} 입니다.</p>
                         </div>
                         <div id="welcomeProfile">
                             <a href="/user/profileEdit">프로필 설정하러 가기</a>
