--- a/front/views/board/category/boardWrite.html
+++ b/front/views/board/category/boardWrite.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <link rel="stylesheet" href="/css/root.css" />
         <link rel="stylesheet" href="/css/layout/header.css" />
         <link rel="stylesheet" href="/css/layout/writeForm.css" />
         <link rel="stylesheet" href="/css/layout/footer.css" />
-
         <title>Document</title>
     </head>
     <body>
@@ -24,7 +24,7 @@
                     <form method="post" action="/board/write">
                         <ul>
                             <li class="subject">
-                                <select class="mainCategorySelect" name="mainCategory_idx" onchange="categoryChange(this)">
+                                <select class="mainCategorySelect" name="mainName" onchange="categoryChange(this)">
                                     <option>--카테고리 선택--</option>
                                     <!-- 만약에 벨류값 없으면 alert 뜨게 -->
                                     <option value="IT">IT</option>
@@ -37,22 +37,22 @@
                                 </select>
 
                                 <br />
-                                <input type="text" name="subject" placeholder="제목을 입력하세요" />
+                                <input type="text" name="subject" placeholder="제목을 입력하세요" required />
                             </li>
 
                             <li class="content">
-                                <textarea name="content" placeholder="내용을 입력하세요"></textarea><br />
-                                <input type="file" name="img" />
+                                <textarea name="content" placeholder="내용을 입력하세요" required></textarea><br />
+                                <input type="file" name="fileUrl" />
                             </li>
 
                             <li class="hashtagLi" style="margin-top: 1.5rem">
                                 <span style="color: gray"># </span>
-                                <input type="text" class="hashtagBox" name="tagName" placeholder="해시태그" style="border: none" />
+                                <input type="text" class="hashtagBox" placeholder="해시태그" style="border: none" />
                             </li>
                         </ul>
                         <button class="submitBtn">등록하기</button>
                     </form>
-                    <button class="cancelBtn" onclick="location.href='board/list'">돌아가기</button>
+                    <button class="cancelBtn" onclick="location.href='list'">돌아가기</button>
                 </div>
             </div>
         </article>
