feat: list page 좋아요 클릭시 이미지 변경

--- a/front/views/layout/header.html
+++ b/front/views/layout/header.html
@@ -1,5 +1,5 @@
 {% block header %}
-  <div class="wrap">
+<div class="wrap">
     <aside id="sidebarWrap">
         <div class="cancleBtn">
             <span class="cancle1"></span>
@@ -27,16 +27,16 @@
             <div class="headerContentWrap">
                 <div class="headerContents">
                     <a href=""><div class="headerContent">Home</div></a>
-                    <a href=""><div class="headerContent">Board</div></a>
+                    <a href="/board/list"><div class="headerContent">Board</div></a>
                     <a href=""><div class="headerContent">Notice</div></a>
                     <a href=""><div class="headerContent">QnA</div></a>
                 </div>
             </div>
             <div class="headerFunction">
                 <form class="searchWrap">
-                    <input id="search" class="invisible" type="text">
+                    <input id="search" class="invisible" type="text" />
                     <button id="searchBtn" class="invisible">검색</button>
-                    <img id="searchIcon" src="/img/search.png">
+                    <img id="searchIcon" src="/img/search.png" />
                 </form>
                 <div class="hamburgerBtn">
                     <span class="stick h1"></span>
@@ -46,6 +46,5 @@
             </div>
         </div>
     </header>
-    
 </div>
 {% endblock %}
