--- a/front/public/css/board/boardList.css
+++ b/front/public/css/board/boardList.css
@@ -132,9 +132,19 @@ article {
 /* 좋아요 */
 .boardListContents > .boardFindOne > .boardListLiked {
     width: 5%;
+    display: flex;
+    flex-direction: column;
     text-align: center;
-    padding: 1rem 0;
 }
+
+.boardListContents > .boardFindOne > .boardListLiked > img {
+    object-fit: none;
+}
+
+.boardListContents > .boardFindOne > .boardListLiked > .changeIMG > .off {
+    display: none;
+}
+
 /* list 게시물 템플릿 끝 */
 
 /* 페이징 */
