--- a/front/views/board/category/boardList.html
+++ b/front/views/board/category/boardList.html
@@ -66,11 +66,15 @@
                             </div>
                             <!-- 좋아요 -->
                             <div class="boardListLiked">
-                                <img src="/img/thumsup.png" />
+                                <div class="changeIMG">
+                                    <img id="beforeClick" src="/img/thumsup.png" />
+                                    <!-- <img id="afterClick" class="off" src="/img/thumsupClick.png" /> -->
+                                </div>
                                 <span>200</span>
                             </div>
                         </div>
 
+                        <!-- 더미 -->
                         <div class="boardFindOne">
                             <!-- 대표이미지 -->
                             <div class="boardListPic"><img src="/img/header.png" /></div>
@@ -86,11 +90,13 @@
                             </div>
                             <!-- 좋아요 -->
                             <div class="boardListLiked">
-                                <img src="/img/thumsup.png" />
+                                <div class="changeIMG">
+                                    <img id="beforeClick" src="/img/thumsup.png" />
+                                    <!-- <img id="afterClick" class="off" src="/img/thumsupClick.png" /> -->
+                                </div>
                                 <span>200</span>
                             </div>
                         </div>
-
                         <div class="boardFindOne">
                             <!-- 대표이미지 -->
                             <div class="boardListPic"><img src="/img/header.png" /></div>
@@ -106,11 +112,13 @@
                             </div>
                             <!-- 좋아요 -->
                             <div class="boardListLiked">
-                                <img src="/img/thumsup.png" />
+                                <div class="changeIMG">
+                                    <img id="beforeClick" src="/img/thumsup.png" />
+                                    <!-- <img id="afterClick" class="off" src="/img/thumsupClick.png" /> -->
+                                </div>
                                 <span>200</span>
                             </div>
                         </div>
-
                         <div class="boardFindOne">
                             <!-- 대표이미지 -->
                             <div class="boardListPic"><img src="/img/header.png" /></div>
@@ -126,11 +134,13 @@
                             </div>
                             <!-- 좋아요 -->
                             <div class="boardListLiked">
-                                <img src="/img/thumsup.png" />
+                                <div class="changeIMG">
+                                    <img id="beforeClick" src="/img/thumsup.png" />
+                                    <!-- <img id="afterClick" class="off" src="/img/thumsupClick.png" /> -->
+                                </div>
                                 <span>200</span>
                             </div>
                         </div>
-
                         <div class="boardFindOne">
                             <!-- 대표이미지 -->
                             <div class="boardListPic"><img src="/img/header.png" /></div>
@@ -146,11 +156,13 @@
                             </div>
                             <!-- 좋아요 -->
                             <div class="boardListLiked">
-                                <img src="/img/thumsup.png" />
+                                <div class="changeIMG">
+                                    <img id="beforeClick" src="/img/thumsup.png" />
+                                    <!-- <img id="afterClick" class="off" src="/img/thumsupClick.png" /> -->
+                                </div>
                                 <span>200</span>
                             </div>
                         </div>
-
                         <div class="boardFindOne">
                             <!-- 대표이미지 -->
                             <div class="boardListPic"><img src="/img/header.png" /></div>
@@ -166,14 +178,16 @@
                             </div>
                             <!-- 좋아요 -->
                             <div class="boardListLiked">
-                                <img src="/img/thumsup.png" />
+                                <div class="changeIMG">
+                                    <img id="beforeClick" src="/img/thumsup.png" />
+                                    <!-- <img id="afterClick" class="off" src="/img/thumsupClick.png" /> -->
+                                </div>
                                 <span>200</span>
                             </div>
                         </div>
-
                         <div class="boardFindOne">
                             <!-- 대표이미지 -->
-                            <div class="boardListPic"><img src="../../../public/img/header.png" /></div>
+                            <div class="boardListPic"><img src="/img/header.png" /></div>
                             <!-- 제목, 닉네임, 날짜 -->
                             <div class="boardListContent">
                                 <ul>
@@ -186,14 +200,16 @@
                             </div>
                             <!-- 좋아요 -->
                             <div class="boardListLiked">
-                                <img src="../../../public/img/thumsup.png" />
+                                <div class="changeIMG">
+                                    <img id="beforeClick" src="/img/thumsup.png" />
+                                    <!-- <img id="afterClick" class="off" src="/img/thumsupClick.png" /> -->
+                                </div>
                                 <span>200</span>
                             </div>
                         </div>
-
                         <div class="boardFindOne">
                             <!-- 대표이미지 -->
-                            <div class="boardListPic"><img src="../../../public/img/header.png" /></div>
+                            <div class="boardListPic"><img src="/img/header.png" /></div>
                             <!-- 제목, 닉네임, 날짜 -->
                             <div class="boardListContent">
                                 <ul>
@@ -206,14 +222,16 @@
                             </div>
                             <!-- 좋아요 -->
                             <div class="boardListLiked">
-                                <img src="../../../public/img/thumsup.png" />
+                                <div class="changeIMG">
+                                    <img id="beforeClick" src="/img/thumsup.png" />
+                                    <!-- <img id="afterClick" class="off" src="/img/thumsupClick.png" /> -->
+                                </div>
                                 <span>200</span>
                             </div>
                         </div>
-
                         <div class="boardFindOne">
                             <!-- 대표이미지 -->
-                            <div class="boardListPic"><img src="../../../public/img/header.png" /></div>
+                            <div class="boardListPic"><img src="/img/header.png" /></div>
                             <!-- 제목, 닉네임, 날짜 -->
                             <div class="boardListContent">
                                 <ul>
@@ -226,14 +244,16 @@
                             </div>
                             <!-- 좋아요 -->
                             <div class="boardListLiked">
-                                <img src="../../../public/img/thumsup.png" />
+                                <div class="changeIMG">
+                                    <img id="beforeClick" src="/img/thumsup.png" />
+                                    <!-- <img id="afterClick" class="off" src="/img/thumsupClick.png" /> -->
+                                </div>
                                 <span>200</span>
                             </div>
                         </div>
-
                         <div class="boardFindOne">
                             <!-- 대표이미지 -->
-                            <div class="boardListPic"><img src="../../../public/img/header.png" /></div>
+                            <div class="boardListPic"><img src="/img/header.png" /></div>
                             <!-- 제목, 닉네임, 날짜 -->
                             <div class="boardListContent">
                                 <ul>
@@ -246,10 +266,14 @@
                             </div>
                             <!-- 좋아요 -->
                             <div class="boardListLiked">
-                                <img src="../../../public/img/thumsup.png" />
+                                <div class="changeIMG">
+                                    <img id="beforeClick" src="/img/thumsup.png" />
+                                    <!-- <img id="afterClick" class="off" src="/img/thumsupClick.png" /> -->
+                                </div>
                                 <span>200</span>
                             </div>
                         </div>
+                        <!-- 더미끝 -->
 
                         <!-- 페이징 -->
                         <div class="boardListPaging">
@@ -272,5 +296,6 @@
             </div>
         </article>
         {% include 'layout/footer.html' %}
+        <script src="/js/board/category/boardList.js" type="text/javascript"></script>
     </body>
 </html>
